...
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="sign_up">Sign Up !</string>
    <string name="login">LogIn</string>
    <string name="no_account_prompt_signup">Don\'t have an account? Sign up here !</string>
    <string name="add_a_section">add a section</string>
    <string name="section_name">Section name</string>
    <string name="flag_of_language">flag_of_language</string>
    <string name="edit">edit</string>
...
