<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".TextToSpeechActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="1dp"
            tools:layout_editor_absoluteX="1dp"
            android:padding="5dp">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="345dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_text_input_tts"
                android:gravity="top"
                android:hint="Type your text here"
                android:importantForAutofill="no" />

        <Button
                android:text="Speak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/button_speak"
                android:onClick="speak" />

        <androidx.constraintlayout.widget.Barrier
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:barrierDirection="top" />

        <TextView
                android:text="Pitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_view_pitch" />

        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seek_bar_pitch"
                android:max="10"
                android:progress="5" />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:text="Speech rate" />

        <SeekBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seek_bar_speech_rate"
                android:max="10"
                android:progress="5" />

        <TextView
                android:text="Language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView5" />

        <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_languages"
                android:spinnerMode="dropdown" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>